--- a/app/src/main/assets/widget/css/style.css
+++ b/app/src/main/assets/widget/css/style.css
@@ -1,24 +1,6 @@
 html, body {
-	font-size: 14px;
+	width: 100%;
 	height: 100%;
-}
-
-header {
-	background-color: #f2f2f2;
-}
-
-header div span {
-	line-height: 48px;
-	height: 48px;
-	text-align: center;
-	display: none;
-	color: #323237;
-	position: relative;
-	font-size: 20px;
-}
-
-header div span.active {
-	display: block;
 }
 
 .hover {
@@ -68,4 +50,17 @@ header div span.active {
 
 #wrap {
 	height: 100%;
+	display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-flex-flow: column;
+    flex-flow: column;
+}
+
+#main{
+    -webkit-box-flex: 1; 
+    -webkit-flex: 1;
+    flex: 1;
+    padding: 2em;
 }
