--- a/app/src/main/assets/widget/css/app.css
+++ b/app/src/main/assets/widget/css/app.css
@@ -1,17 +1,22 @@
+.mui-slider-indicator {
+	bottom: 0;
+}
 .mui-slider {
-    width: 100%;
+	background-color: #f2f2f2;
 }
-/*轮播图片*/
-.mui-slider img {
-    width: 100%;
-    height: 100%;
+.mui-slider-custom {
+    margin-top: -15px;
+    border-radius: 1.266667rem;
 }
-/*轮播指示点*/
-.mui-slider-indicator .mui-active {
-    background-color: #FF6696 !important;
-}
-.mui-slider-indicator .mui-indicator {
-    box-shadow: none !important;
-    background-color: #EEEEEE;
-    opacity: 0.7;  /*透明度*/
+.icon {
+   width: 1em; height: 1em;
+   vertical-align: -0.15em;
+   fill: currentColor;
+   overflow: hidden;
+   font-size: 42px;
+   line-height: 100px;
+   color:#333;
+   -webkit-transition: font-size 0.25s ease-out 0s;
+   -moz-transition: font-size 0.25s ease-out 0s;
+   transition: font-size 0.25s ease-out 0s;
 }
