首页布局优化

--- a/app/src/main/assets/widget/css/index.css
+++ b/app/src/main/assets/widget/css/index.css
@@ -33,7 +33,7 @@
 .topbar {
 	background: #d81e06;
 	height: 50px;
-	border-bottom: 1px solid #dddfe3;
+	border-bottom: 1px solid #d81e06d6;
 	position: relative;
 }
 .egret-header-title {
@@ -61,6 +61,40 @@ ul {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
+}
+.egret-header-search {
+	background-color: #fff;
+	position: absolute;
+	left: 72px;
+	right: 51px;
+	height: 34px;
+	margin-top: 8px;
+	border-radius: 34px;
+}
+.egret-header-search img {
+	margin-left: 30px;
+	height: 20px;
+	margin-top: 7px;
+}
+.egret-header-search input {
+	line-height: 24px;
+	font-size: 14px;
+	padding-top: 5px;
+}
+.egret-header-search input:focus {
+	outline: none;
+}
+.currentCity {
+	float: left;
+	height: 50px;
+	line-height: 50px;
+	color: #fff;
+	margin-left: 8px;
+}
+.fl > img {
+	height: 20px;
+	padding-top: 15px;
+	margin-left: -9px;
 }
 #footer {
 	background-color: #f2f2f2;
@@ -103,4 +137,7 @@ ul {
 }
 #footer ul li:nth-child(4).active {
 	background-image: url(../image/bottombtn0402.png);
+}
+.highlight {
+	opacity: 0.8;
 }
